# Chess_Engine

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  bishop.cpp  bishop.h  pieces.cpp  rook.cpp  rook.h
inc/: BearLibTerminal.h
res/: BearLibTerminal.lib
src/: CMakeLists.txt  Chess.cpp  StateManager.cpp  StateManager.h  bishop.cpp  bishop.h  board.cpp  board.h  chessstate.cpp  chessstate.h  coord.cpp  coord.h  defs.h  element.cpp  element.h  game.cpp  game.h  introstate.cpp  introstate.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pausestate.cpp  pausestate.h  pawn.cpp  pawn.h  pieces.cpp  pieces.h  pieceutils.h  queen.cpp  queen.h  rook.cpp  rook.h  state.cpp  state.h  statemanager.cpp  statemanager.h  ui.cpp  (+1 more)
